resolved issue with overlapping sprite

--- a/css/ui-global-bar.css
+++ b/css/ui-global-bar.css
@@ -10,7 +10,7 @@
  * Base File
  */
 .sprites-sprite, #ui-footer-logo a {
-  background: url('images/sprites-sf1dddf370a.png') no-repeat;
+  background: url('images/sprites-s56c9096924.png') no-repeat;
 }
 
 /**
