--- a/css/uiowa-bar-light.css
+++ b/css/uiowa-bar-light.css
@@ -7,7 +7,7 @@
  * Base File
  */
 .sprites-sprite, .uiowa-bar-light #ui-logo a {
-  background: url('images/sprites-sf1dddf370a.png') no-repeat;
+  background: url('images/sprites-s56c9096924.png') no-repeat;
 }
 
 /**
@@ -80,7 +80,7 @@
   box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.8);
 }
 .uiowa-bar-light #ui-logo a {
-  background-position: 8px -42px;
+  background-position: 8px -82px;
 }
 
 /* ========================================================================== */
